Agrugué dos botones extra en el html para el jugador 2

--- a/blackjack.htm
+++ b/blackjack.htm
@@ -8,8 +8,10 @@
 </head>
 <body>
     <button id="comenzar_juego">Comenzar juego</button>
-    <button id="pedir_carta" type="button">Pedir carta</button>
-    <button id="parar" type="button">Parar</button>
+    <button id="pedir_carta" type="button">Pedir carta jugador 1</button>
+    <button id="parar" type="button">Parar jugador 1</button>
+    <button id="pedir_carta2" type="button">Pedir carta jugador 2</button>
+    <button id="parar2" type="button">Parar jugador 2</button>
     <script src="blackjack.js"></script>
 </body>
 </html>
