--- a/blackjack.htm
+++ b/blackjack.htm
@@ -7,9 +7,9 @@
     <title>BlackJack</title>
 </head>
 <body>
-    <button id="comenzar_juego">Comenzar juego</button>
+    <button id="comenzar_juego">Comenzar juego</button><br><br>
     <button id="pedir_carta" type="button">Pedir carta jugador 1</button>
-    <button id="parar" type="button">Parar jugador 1</button>
+    <button id="parar" type="button">Parar jugador 1</button><br><br>
     <button id="pedir_carta2" type="button">Pedir carta jugador 2</button>
     <button id="parar2" type="button">Parar jugador 2</button>
     <script src="blackjack.js"></script>
