Agregué un modo en blanco

--- a/blackjack.htm
+++ b/blackjack.htm
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+        <button id="boton_modo_oscuro" type="text">⭐</button>
         <button id="comenzar_juego">Comenzar juego</button>
     </header>
     <main>
