--- a/blackjack.htm
+++ b/blackjack.htm
@@ -7,6 +7,7 @@
     <title>BlackJack</title>
     <link rel="stylesheet" href="blackjack.css">
     <link rel="stylesheet" href="media_462.css" media="(min-width: 464px)">
+    <link rel="stylesheet" href="media_1350.css" media="(min-width: 1350px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Akronim&display=swap" rel="stylesheet"> 
