--- a/blackjack.htm
+++ b/blackjack.htm
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Akronim&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="blackjack.css">
+    <link rel="stylesheet" href="media_462.css" media="(min-width: 465px)">
 </head>
 <body>
     <header>
