Agregué un botón para cambiar de modo un jugador a modo dos jugadores

--- a/blackjack.htm
+++ b/blackjack.htm
@@ -16,6 +16,7 @@
     <header>
         <button id="boton_modo_oscuro" type="text">⭐</button>
         <button id="comenzar_juego">Comenzar juego</button>
+        <a id="link" href="blackjack2.htm">Dos jugadores</a>
     </header>
     <main>
         <section id="section_jugador1"></section>
