Agregué el javascript para el archivo html 2

--- a/blackjack2.htm
+++ b/blackjack2.htm
@@ -40,6 +40,6 @@
 <!--     <button id="pedir_carta" type="button">Pedir carta jugador 1</button>
     <button id="parar" type="button">Parar jugador 1</button><br><br> -->
 
-    <script src="blackjack.js"></script>
+    <script src="blackjack2.js"></script>
 </body>
 </html>
